--- a/MinhaApi/appsettings.json
+++ b/MinhaApi/appsettings.json
@@ -5,5 +5,42 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "DefaultConnectionString": "MySql",
+  "ConnectionString": {
+    "PostgreSql": "",
+    "Oracle": "",
+    "MySql": "Server=localhost;Port=3306;DataBase=dbAPI_Integration;Uid=root;Pwd=mudar@123"
+  },
+  "ApiDocTitle": "Minha API testeeeeeee",
+  "AllowedHosts": "*",
+  "ClientRateLimiting": {
+    "EnableEndpointRateLimiting": false,
+    "StackBlockedRequests": false,
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "EndpointWhitelist": [ "get:/api/license", "*:/api/status", "*:/swagger/*" ],
+    "ClientWhitelist": [ "dev-id-1", "dev-id-2" ],
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1s",
+        "Limit": 2
+      },
+      {
+        "Endpoint": "*",
+        "Period": "15m",
+        "Limit": 100
+      },
+      {
+        "Endpoint": "*",
+        "Period": "12h",
+        "Limit": 1000
+      },
+      {
+        "Endpoint": "*",
+        "Period": "7d",
+        "Limit": 10000
+      }
+    ]
+  }
 }
