--- a/MinhaApi/Properties/launchSettings.json
+++ b/MinhaApi/Properties/launchSettings.json
@@ -1,28 +1,26 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43877",
-      "sslPort": 44365
+      "applicationUrl": "http://localhost:54766/FSWSUP-00000_Aplicacao/",
+      "sslPort": 0
     }
   },
   "profiles": {
-    "MinhaApi": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7199;http://localhost:5199",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "CustomApplicationApi": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:54767/FSWSUP-00000_Aplicacao/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
